chore: update OIDC_SCOPES in .env.example and add CSRF Token security to Swagger documentation

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
 OIDC_REDIRECT_URL=
 OIDC_POST_LOGOUT_REDIRECT_URI=
-# Scope minimal yang diperlukan adalah "openid email profile role"
-OIDC_SCOPES="openid email profile role"
+# Scope minimal yang diperlukan adalah "openid email profile resource role"
+OIDC_SCOPES="openid email profile resource role"
 
 # Konfigurasi CORS untuk Frontend
 CORS_PATH=*
